# rapid-meeting-app

./: .env.example  .gitignore  Makefile  README.md
backend/: .dockerignore  Dockerfile  go.mod  railway.toml
backend/cmd/api/: main.go
backend/internal/config/: config.go
backend/internal/fathom/: client.go  client_test.go
backend/internal/files/: storage.go
backend/internal/models/: models.go
backend/internal/rapid/: markdown.go  markdown_test.go
backend/internal/server/: server.go
backend/internal/store/: postgres.go
backend/migrations/: 001_init.sql  002_fathom.sql
docs/: fathom-v2-plan.md  local-cloudflare-tunnel.md  railway-deploy.md
frontend/: Dockerfile  package.json  railway.toml
frontend/src/: app.css  app.d.ts
frontend/src/lib/: types.ts
frontend/src/lib/server/: api.ts
frontend/src/routes/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
frontend/src/routes/meetings/[id]/: +page.server.ts  +page.svelte
frontend/src/routes/meetings/[id]/report/: +page.server.ts  +page.svelte
frontend/src/routes/meetings/[id]/review/: +page.server.ts  +page.svelte
scripts/: dev.sh  tunnel.sh
worker/: Dockerfile  README.md  pyproject.toml  railway.toml
worker/src/app/: config.py  db.py  main.py  pipeline.py  reporting.py  storage.py
worker/src/tests/: test_pipeline.py  test_reporting.py
